[package]
name = "chatex-sdk-rust"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"] }
http = { version = "0.*" }
hyper = { version = "0.*", features = ["full"]}
serde_json = { version = "1.*" }
url = { version = "2.*" }
