[package]
name = "basic_info"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.*", features = ["full"]}
hyper-tls = { version = "0.*" }
tokio = { version = "1.*", features = ["full"]}
serde = { version = "1.*", features = ["derive"]}
serde_json = { version = "1.*" }
http = { version = "0.*" }
chatex-sdk-rust = { path = "../../" }
url = { version = "2.*" }
simple-log = { version = "1.0.0" }
futures = { version = "0.3.*" }
dotenv = { version = "0.15.*" }
